After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 742802 - Fix a couple of memory leaks
Fix a couple of memory leaks
Status: RESOLVED FIXED
Product: sound-juicer
Classification: Applications
Component: general
git master
Other All
: Normal normal
: ---
Assigned To: Sound Juicer Maintainers
Sound Juicer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-01-12 10:44 UTC by Phillip Wood
Modified: 2015-02-16 18:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't leak encoding target (714 bytes, patch)
2015-01-12 10:44 UTC, Phillip Wood
none Details | Review
Don't leak combobox model (976 bytes, patch)
2015-01-12 10:44 UTC, Phillip Wood
none Details | Review
Code cleanups (1.18 KB, patch)
2015-01-12 10:44 UTC, Phillip Wood
none Details | Review

Description Phillip Wood 2015-01-12 10:44:01 UTC
These are not serious as the preferences dialog is only every created
once.
Comment 1 Phillip Wood 2015-01-12 10:44:04 UTC
Created attachment 294334 [details] [review]
Don't leak encoding target
Comment 2 Phillip Wood 2015-01-12 10:44:11 UTC
Created attachment 294335 [details] [review]
Don't leak combobox model
Comment 3 Phillip Wood 2015-01-12 10:44:19 UTC
Created attachment 294336 [details] [review]
Code cleanups
Comment 4 Phillip Wood 2015-02-16 18:34:49 UTC
Attachment 294335 [details] pushed as 9f470c3 - prefs: Don't leak combobox model
Attachment 294334 [details] is obsolete as there is only a weak reference to the encoding target.