prefs: Don't leak combobox model

GtkComboBox takes it's own reference to the model so we need to free
ours.

https://bugzilla.gnome.org/show_bug.cgi?id=742802